@@ -34,18 +34,20 @@ mpost_web = mplibdir/mpost.w mplibdir/mpxout.w
 
 $(mpost_OBJECTS): $(nodist_mpost_SOURCES) libmplib.a
 
-# Double-colon rule since we do something similar in luatexdir (maybe others).
-install-exec-hook::
-	cd $(DESTDIR)$(bindir) && rm -f dvitomp$(EXEEXT) \
-	  && ln -s mpost$(EXEEXT) dvitomp$(EXEEXT)
-
 EXTRA_DIST += mplibdir/ChangeLog $(mpost_web)
 
 DISTCLEANFILES += $(nodist_mpost_SOURCES) mpxout-ctangle
 
+# Double-colon rule since we do something similar in luatexdir (maybe others).
+install-exec-hook::
+	cd $(DESTDIR)$(bindir) && rm -f dvitomp$(EXEEXT) \
+	  && $(LN_S) mpost$(EXEEXT) dvitomp$(EXEEXT)
+uninstall-hook::
+	rm -f $(DESTDIR)$(bindir)/dvitomp$(EXEEXT)
+
 ## MetaPost Tests
 ##
-mp_tests = mplibdir/mptrap.test
+mp_tests = mplibdir/dvitomp.test mplibdir/mptrap.test
 
 EXTRA_DIST += $(mp_tests)
 
@@ -56,6 +58,8 @@ endif MP
 
 .PHONY: mptrap-clean
 clean-local:: mptrap-clean
+## dvitomp.test
+DISTCLEANFILES += ptmr.mpx tests/xptmr.mpx tests/xstory.mpx
 ## mptrap.test
 mptrap-clean:
 	rm -f mtrap.mp mtrap.mem trapf.tfm
